[tool.poetry]
name = "keylogger"
version = "0.1.0"
description = "A POC keylogger written in python"
authors = ["Blakeinstein <rishi1998@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Blakeinstein/keylogger"

[tool.poetry.dependencies]
python = "^3.10"
keyboard = "^0.13.5"
argparse = "^1.4.0"

[tool.poetry.scripts]
keylogger = "keylogger.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
